--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -1,51 +1,42 @@
 zh-TW:
   views:
-    search: "搜尋"
-    searchresult: "搜尋結果"
-    edit_task: "編輯任務"
-    new_task: "新增任務"
+    edit_task: "編輯"
+    create_task: "送出"
+    delete_task: "刪除"
+    save_task: "儲存修改"
     show_task: "任務內容"
-    tasks_topic: "Test18 任務列表"
+    new_task: "新增任務"
     placeholder: "此欄位必填"
-    home: "首頁"
-    submit_btn: "送出"
+    confirm_massage: '確定要刪除任務嗎？'
+    back_home: "回首頁"
+    home: "任務首頁"
+    task_detail: '任務詳細資料'
+    cancel: '取消'
     tasks:
-      search_all: "可搜尋任務 內容"
-      title: "標題"
-      content: "內容"
-      date: "日期"
-      deadline: "任務時間"
+      title: "任務名稱:"
+      description: "任務描述:"
+      start_time: '開始時間:'
+      end_time: '截止時間:'
+      date: "日期:"
+      deadline: "任務時間:"
+      tag_list: '標籤:'
       edit: "編輯"
       show: "查看"
       delete: "刪除"
-      delete_msg: "要刪除任務!你非常肯定嗎？"
-      state: "狀態"
-      priority: "等級"
-    pagination:
-      first: "&laquo; 第一頁"
-      last: "最後一頁 &raquo;"
-      previous: "&lsaquo; 上一頁"
-      next: "下一頁 &rsaquo;"
-      truncate: "&hellip;"
-    priority_lv:
+      status: "狀態:"
+      priority: "優先等級"
+    priority:
       low: "低"
       middle: "中"
       high: "高"
-  helpers:
-    page_entries_info:
-      one_page:
-        display_entries:
-          zero: "找不到 %{entry_name}"
-          one: "只有 <b>1</b> 筆 %{entry_name}"
-          other: "顯示 <b>所有 %{count}</b> 筆 %{entry_name}"
-      more_pages:
-        display_entries: "顯示 <b>%{first}&nbsp;-&nbsp;%{last}</b> 筆 %{entry_name}，共 <b>%{total}</b> 筆"
-  status:
-    pending: "未處理"
-    processing: "處理中"
-    solved: "已完成"
-    start: "開始"
-    done: "完成"     
+    status:
+      pending: "待進行"
+      processing: "進行中"
+      done: "已完成"  
+    priority:
+      low: "低"
+      middle: "中"
+      high: "高"
   tasks:
     create:
       notice: "新增任務成功"
@@ -53,4 +44,3 @@ zh-TW:
       notice: "編輯任務成功"
     destroy:
       notice: "刪除成功"
-      not_success: "刪除失敗" 
